refactor: enforce bo do service boundaries